syntax = "proto3";

package m3api;

message PointMsg {
    sint32 x = 2;
    sint32 y = 3;
    sint32 z = 4;
}

message ConnectionMsg {
    sint32 conn_id = 1;
    PointMsg vector = 2;
    int64 ds = 3;
}

message TrioMsg {
    int32 trio_id = 1;
    repeated sint32 conn_ids = 2;
}

message GrowthContextMsg {
    int32 growth_context_id = 1;
    int32 growth_type = 2;
    int32 growth_index = 3;
}

message PointPackDataMsg {
    repeated ConnectionMsg all_connections = 1;
    repeated TrioMsg all_trios = 2;
    repeated GrowthContextMsg all_growth_contexts = 3;
    repeated int32 valid_next_trio_ids = 6;
    repeated int32 mod4_permutations_trio_ids = 7;
    repeated int32 mod8_permutations_trio_ids = 8;
}
